# Hollow

./: .clangd  .gitignore  CMakeLists.txt  README.md
assets/: test.csv
assets/maps/: area_externa.tmx  biblioteca.tmx  corredor_saida.tmx  cozinha.tmx  deposito.tmx  hall_principal.tmx  porao.tmx  porao_fundo.tmx  quarto_crianca.tmx  sala_estar.tmx  vestibulo.tmx  vestibulo_Collision.csv  vestibulo_Floor.csv  vestibulo_Furniture.csv  vestibulo_Props.csv  vestibulo_Walls.csv
assets/tilesets/: PropsV2.tsx  TilesetV2.tsx  furniture_and_props.tsx
src/: AudioManager.cpp  AudioManager.hpp  Boss.cpp  Boss.hpp  DialogueBox.cpp  DialogueBox.hpp  DialogueLine.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  EventQueue.cpp  EventQueue.hpp  Game.cpp  Game.hpp  HUD.cpp  HUD.hpp  HitEffect.cpp  HitEffect.hpp  Item.cpp  Item.hpp  ItemList.cpp  ItemList.hpp  Map.cpp  Map.hpp  NPC.cpp  NPC.hpp  PageReader.cpp  PageReader.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Shadow.cpp  Shadow.hpp  Spectre.cpp  Spectre.hpp  main.cpp
